@@ -985,6 +985,7 @@ static void MSLStartElement(void *context,const xmlChar *name,
               if (LocaleCompare(keyword,"geometry") == 0)
               {
                 (void) GetMagickGeometry(value,&x,&y,&width,&height);
+                gravity=ForgetGravity;
                 break;
               }
               else if (LocaleCompare(keyword,"gravity") == 0)
@@ -1038,6 +1039,7 @@ static void MSLStartElement(void *context,const xmlChar *name,
               if (LocaleCompare(keyword,"x") == 0)
               {
                 x = atoi( value );
+                gravity=ForgetGravity;
                 break;
               }
               ThrowException(msl_info->exception,OptionError,UnrecognizedAttribute,keyword);
@@ -1049,6 +1051,7 @@ static void MSLStartElement(void *context,const xmlChar *name,
               if (LocaleCompare(keyword,"y") == 0)
               {
                 y = atoi( value );
+                gravity=ForgetGravity;
                 break;
               }
               ThrowException(msl_info->exception,OptionError,UnrecognizedAttribute,keyword);
