@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2008-09-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/msl.c: Applied MSL patch from graphicsmagick-bugs list to
+        correct handling of geometry x,y values by setting gravity
+        attribute to ForgetGravity.
+
+</UL>
+<p>
 2008-09-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
